--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -696,9 +696,6 @@ img {
 .flex {
   display: flex;
 }
-.h-\[100vh\] {
-  height: 100vh;
-}
 .h-\[350vh\] {
   height: 350vh;
 }
@@ -732,9 +729,19 @@ img {
 .overflow-hidden {
   overflow: hidden;
 }
-.bg-zinc-100 {
+.rounded-md {
+  border-radius: 0.375rem;
+}
+.border {
+  border-width: 1px;
+}
+.border-black {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
+.bg-red-500 {
   --tw-bg-opacity: 1;
-  background-color: rgb(244 244 245 / var(--tw-bg-opacity));
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 .bg-zinc-950 {
   --tw-bg-opacity: 1;
