--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -66,6 +66,10 @@ img {
     object-fit: cover;
 }
 
+.ombre-int {
+  box-shadow: inset 0 0 25px rgba(0, 0, 0, 0.1);
+}
+
 .arrow {
   border: solid rgb(255, 255, 255);
   border-width: 0 25px 25px 0;
@@ -82,6 +86,42 @@ img {
     overflow: hidden;
 
 }
+
+#card:hover {
+    transform: scale(1.02);
+}
+
+#card {
+  overflow: hidden;
+  transition: transform 0.3s ease-in-out;
+}
+
+#card > div {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  border-radius: inherit;
+  overflow: hidden;
+}
+
+#card > div::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 300%;
+  height: 300%;
+  background-color: rgb(63 63 70 ); 
+  border-radius: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  transform-origin: top left;
+  transition: transform 0.7s ease-out;
+}
+
+#card:hover > div::before {
+  transform: translate(-50%, -50%) scale(1);
+}
+
 
 #card-1 {
     width: 250px;
