--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -567,6 +567,10 @@ img {
        object-fit: cover;
 }
 
+.ombre-int {
+  box-shadow: inset 0 0 25px rgba(0, 0, 0, 0.1);
+}
+
 .arrow {
   border: solid rgb(255, 255, 255);
   border-width: 0 25px 25px 0;
@@ -583,6 +587,42 @@ img {
     overflow: hidden;
 
 }
+
+#card:hover {
+    transform: scale(1.02);
+}
+
+#card {
+  overflow: hidden;
+  transition: transform 0.3s ease-in-out;
+}
+
+#card > div {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  border-radius: inherit;
+  overflow: hidden;
+}
+
+#card > div::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 300%;
+  height: 300%;
+  background-color: rgb(63 63 70 ); 
+  border-radius: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  transform-origin: top left;
+  transition: transform 0.7s ease-out;
+}
+
+#card:hover > div::before {
+  transform: translate(-50%, -50%) scale(1);
+}
+
 
 #card-1 {
     width: 250px;
@@ -733,20 +773,29 @@ img {
 .flex {
   display: flex;
 }
-.h-\[200vh\] {
-  height: 200vh;
+.grid {
+  display: grid;
 }
-.h-\[350vh\] {
-  height: 350vh;
+.h-\[100vh\] {
+  height: 100vh;
 }
-.h-\[600vh\] {
-  height: 600vh;
+.h-\[300vh\] {
+  height: 300vh;
+}
+.h-\[320vh\] {
+  height: 320vh;
+}
+.h-\[3rem\] {
+  height: 3rem;
 }
 .h-full {
   height: 100%;
 }
 .h-screen {
   height: 100vh;
+}
+.w-\[3rem\] {
+  width: 3rem;
 }
 .w-\[400vw\] {
   width: 400vw;
@@ -763,6 +812,12 @@ img {
 .flex-grow-\[2\] {
   flex-grow: 2;
 }
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+.grid-rows-2 {
+  grid-template-rows: repeat(2, minmax(0, 1fr));
+}
 .flex-col {
   flex-direction: column;
 }
@@ -771,6 +826,9 @@ img {
 }
 .justify-between {
   justify-content: space-between;
+}
+.gap-12 {
+  gap: 3rem;
 }
 .gap-8 {
   gap: 2rem;
@@ -788,6 +846,9 @@ img {
 }
 .rounded-3xl {
   border-radius: 1.5rem;
+}
+.rounded-full {
+  border-radius: 9999px;
 }
 .rounded-lg {
   border-radius: 0.5rem;
@@ -815,9 +876,16 @@ img {
   --tw-bg-opacity: 1;
   background-color: rgb(228 228 231 / var(--tw-bg-opacity));
 }
+.bg-zinc-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(63 63 70 / var(--tw-bg-opacity));
+}
 .bg-zinc-950 {
   --tw-bg-opacity: 1;
   background-color: rgb(9 9 11 / var(--tw-bg-opacity));
+}
+.p-12 {
+  padding: 3rem;
 }
 .p-16 {
   padding: 4rem;
@@ -894,6 +962,11 @@ img {
 .shadow {
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.shadow-md {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .will-change-transform {
