--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -111,7 +111,7 @@ img {
   left: 0;
   width: 300%;
   height: 300%;
-  background-color: rgb(63 63 70 ); 
+  background-color: black; 
   border-radius: 50%;
   transform: translate(-50%, -50%) scale(0);
   transform-origin: top left;
@@ -120,6 +120,15 @@ img {
 
 #card:hover > div::before {
   transform: translate(-50%, -50%) scale(1);
+}
+
+#card > div > div.absolute {
+  transition: 0.7s ease-out;
+}
+
+#card:hover > div > div.absolute{
+  transition: 0.7s ease-out;
+  box-shadow: inset 0 0 25px rgba(0, 0, 0, 0.5);
 }
 
 
