add 3 game and alpine pres

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -47,8 +47,8 @@ html.lenis, html.lenis body {
 
 .wrapper-hero div svg#Layer_2 {
   position: absolute;
-  transform:translateY(-12px) scale(0.1) ;
-  -webkit-transform:translateY(-12px) scale(0.1);
+  transform:translateY(-12px) translateX(-300px) scale(0.1) ;
+  -webkit-transform:translateY(-12px) translateX(-300px) scale(0.1);
 }
 
 
