--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -547,8 +547,8 @@ html.lenis, html.lenis body {
 
 .wrapper-hero div svg#Layer_2 {
   position: absolute;
-  transform:translateY(-12px) scale(0.1) ;
-  -webkit-transform:translateY(-12px) scale(0.1);
+  transform:translateY(-12px) translateX(-300px) scale(0.1) ;
+  -webkit-transform:translateY(-12px) translateX(-300px) scale(0.1);
 }
 
 
@@ -756,11 +756,14 @@ img {
 .top-\[150vh\] {
   top: 150vh;
 }
-.top-\[230vh\] {
-  top: 230vh;
+.top-\[222vh\] {
+  top: 222vh;
 }
 .z-50 {
   z-index: 50;
+}
+.mt-4 {
+  margin-top: 1rem;
 }
 .flex {
   display: flex;
@@ -768,14 +771,20 @@ img {
 .grid {
   display: grid;
 }
+.h-12 {
+  height: 3rem;
+}
+.h-32 {
+  height: 8rem;
+}
 .h-\[100vh\] {
   height: 100vh;
 }
 .h-\[300vh\] {
   height: 300vh;
 }
-.h-\[320vh\] {
-  height: 320vh;
+.h-\[312vh\] {
+  height: 312vh;
 }
 .h-\[3rem\] {
   height: 3rem;
@@ -785,6 +794,15 @@ img {
 }
 .h-screen {
   height: 100vh;
+}
+.w-12 {
+  width: 3rem;
+}
+.w-32 {
+  width: 8rem;
+}
+.w-40 {
+  width: 10rem;
 }
 .w-\[3rem\] {
   width: 3rem;
@@ -809,8 +827,18 @@ img {
   --tw-scale-y: 1;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
+.scale-90 {
+  --tw-scale-x: .9;
+  --tw-scale-y: .9;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
 .cursor-pointer {
   cursor: pointer;
+}
+.select-none {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
 }
 .grid-cols-3 {
   grid-template-columns: repeat(3, minmax(0, 1fr));
@@ -827,6 +855,9 @@ img {
 .justify-center {
   justify-content: center;
 }
+.justify-around {
+  justify-content: space-around;
+}
 .gap-12 {
   gap: 3rem;
 }
@@ -836,31 +867,41 @@ img {
 .overflow-hidden {
   overflow: hidden;
 }
+.rounded {
+  border-radius: 0.25rem;
+}
 .rounded-3xl {
   border-radius: 1.5rem;
 }
 .rounded-full {
   border-radius: 9999px;
 }
+.border {
+  border-width: 1px;
+}
+.border-gray-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(156 163 175 / var(--tw-border-opacity));
+}
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
+.bg-blue-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+}
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+.bg-yellow-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(234 179 8 / var(--tw-bg-opacity));
+}
 .bg-zinc-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(244 244 245 / var(--tw-bg-opacity));
-}
-.bg-zinc-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(63 63 70 / var(--tw-bg-opacity));
-}
-.bg-zinc-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(39 39 42 / var(--tw-bg-opacity));
-}
-.bg-zinc-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(24 24 27 / var(--tw-bg-opacity));
 }
 .bg-zinc-950 {
   --tw-bg-opacity: 1;
@@ -878,14 +919,27 @@ img {
 .p-6 {
   padding: 1.5rem;
 }
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
 .text-center {
   text-align: center;
 }
-.font-\[Dirtyline\] {
-  font-family: Dirtyline;
-}
 .font-\[Magtis\] {
   font-family: Magtis;
+}
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 .text-6xl {
   font-size: 3.75rem;
@@ -896,6 +950,10 @@ img {
 }
 .text-\[38vw\] {
   font-size: 38vw;
+}
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 .text-white {
   --tw-text-opacity: 1;
@@ -908,6 +966,9 @@ img {
 .text-zinc-700 {
   --tw-text-opacity: 1;
   color: rgb(63 63 70 / var(--tw-text-opacity));
+}
+.text-zinc-700\/0 {
+  color: rgb(63 63 70 / 0);
 }
 .opacity-0 {
   opacity: 0;
@@ -923,9 +984,28 @@ img {
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
-.duration-300 {
-  transition-duration: 300ms;
+.shadow-xl {
+  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.duration-500 {
+  transition-duration: 500ms;
+}
+.ease-in-out {
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .will-change-transform {
   will-change: transform;
+}
+.hover\:scale-110:hover {
+  --tw-scale-x: 1.1;
+  --tw-scale-y: 1.1;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.hover\:duration-500:hover {
+  transition-duration: 500ms;
+}
+.hover\:ease-in-out:hover {
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
